--- a/Ubiquitous2/View/ChatBoxView.xaml
+++ b/Ubiquitous2/View/ChatBoxView.xaml
@@ -10,7 +10,7 @@
              DataContext="{Binding Path=ChatBox, Source={StaticResource Locator}}"              
              Focusable="False"
              Style="{DynamicResource ChatBoxStyle}"              
-             d:DesignWidth="300" d:DesignHeight="400">
+             d:DesignWidth="300" d:DesignHeight="400" RenderTransformOrigin="0.5,0.5">
 
     
     
