--- a/Ubiquitous2/App.xaml
+++ b/Ubiquitous2/App.xaml
@@ -1,4 +1,4 @@
-<Application xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
+﻿<Application xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
              xmlns:vm="clr-namespace:UB.ViewModel" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
