--- a/Ubiquitous2/Skins/Main/Skin.xaml
+++ b/Ubiquitous2/Skins/Main/Skin.xaml
@@ -3,7 +3,8 @@
                     >
 
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="/Skins/Shared/Shared.xaml"/>
+        <ResourceDictionary Source="/Skins/Shared/GrayScrollBar.xaml"/>
+        <ResourceDictionary Source="/Skins/Shared/Shared.xaml"/>        
         <ResourceDictionary Source="/Skins/Main/ChatMessageSkin.xaml"/>
         <ResourceDictionary Source="/Skins/Main/ChatBoxSkin.xaml"/>
         <ResourceDictionary Source="/Skins/Main/MainWindowSkin.xaml"/>
