--- a/Ubiquitous2/web/css/starcitizen.css
+++ b/Ubiquitous2/web/css/starcitizen.css
@@ -11,7 +11,8 @@
   font-style: normal;
   font-weight: 400;
   /*src: local('Electrolize'), local('Electrolize-Regular'), url(/fonts/electrolize.woff2) format('woff2');*/
-  src: local('Electrolize'), local('Electrolize-Regular'), url(/fonts/electrolize.ttf) format('truetype');
+  src: local('Electrolize'), local('Electrolize-Regular'), url(/fonts/electrolize.ttf) format('truetype'),
+                                                           url(/fonts/electrolize.svg) format('svg');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 
