--- a/Ubiquitous2/View/ChatMessageView.xaml
+++ b/Ubiquitous2/View/ChatMessageView.xaml
@@ -8,8 +8,8 @@
              Focusable="False"
              Margin="0,0,0,6"
              xmlns:m="clr-namespace:UB.ViewModel"
+             TextOptions.TextFormattingMode="Display"
              DataContext="{Binding Path=ChatMessage, Source={StaticResource Locator}}"
-             d:DesignHeight="89" d:DesignWidth="300" Style="{DynamicResource ChatMessageTemplate}" FontFamily="Arial Unicode MS"
-             >
+             d:DesignHeight="89" d:DesignWidth="300" Style="{DynamicResource ChatMessageTemplate}" >
 
 </UserControl>
