--- a/Ubiquitous2/App.xaml
+++ b/Ubiquitous2/App.xaml
@@ -11,8 +11,7 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="Skins/StarCitizen/Skin.xaml"/>
-                <ResourceDictionary Source="Skins/Shared/Icons.xaml"/>
+                <ResourceDictionary Source="Skins/Main/Skin.xaml"/>
             </ResourceDictionary.MergedDictionaries>
             <!--Global View Model Locator-->
             <vm:ViewModelLocator x:Key="Locator" d:IsDataSource="True" />
